--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/blob": "^0.27.1",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.0",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jose": "^5.9.6",
